tools: - html-validator has been updated to 1.0.1.3
pbr:
- DIV layout implementation

pbr::mario:
- UI asset has been altered

--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
@@ -5,8 +5,8 @@
 
 .ui-panel {
     position: static;
-    padding: 7mm 15mm 0mm;
-    height: 10mm;
+    padding: 7mm 15mm 1mm 15mm;
+    height: auto;
     background-color: black;
     font-size: 0px;
 }
