pbr: - UI pass development

--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
@@ -21,6 +21,7 @@
     display: inline-block;
     vertical-align: bottom;
     width: 100%;
+    background-color: rgb(118, 41, 206);
 }
 
 .coin-cell {
