--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/style.css
@@ -7,7 +7,7 @@
     position: static;
     padding: 7mm 15mm 1mm 15mm;
     height: auto;
-    background-color: rgb(40, 21, 206);
+    background-color: black;
     font-size: 0px;
     vertical-align: bottom;
 }
@@ -40,7 +40,6 @@
     display: inline-block;
     text-align: right;
     width: 40%;
-    background-color: red;
 }
 
 .coin {
@@ -59,25 +58,18 @@
     display: inline-block;
     text-align: left;
     width: 25%;
-    background-color: green;
 }
 
 .middle-column {
     display: inline-block;
     text-align: center;
     width: 25%;
-    background-color: chocolate;
-}
-
-.middle-column-2 {
-    background-color: rgb(143, 22, 88);
 }
 
 .tail-column {
     display: inline-block;
     text-align: right;
     width: 25%;
-    background-color: darkolivegreen;
 }
 
 #main-widget {
