--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/debug.css
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/debug.css
@@ -17,9 +17,9 @@
 .panel {
     position: static;
     display: inline-block;
-    background-color: rgba(26, 117, 153, 0.719);
+    background-color: rgba(10, 10, 10, 0.801);
     width: 30mm;
-    margin: 30mm 0px 0px 15mm;
+    margin: 30mm 0px 0px 6mm;
     padding: 6mm 6mm 6mm 6mm;
 }
 
@@ -27,6 +27,7 @@
     position: static;
     display: block;
     font-size: 14pt;
+    text-align: left;
 }
 
 .header {
@@ -46,7 +47,7 @@
 }
 
 .z-coordinate {
-    color: rgb(100, 98, 209);
+    color: rgb(111, 132, 248);
 }
 
 .value {
