--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/debug.css
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/css/debug.css
@@ -15,11 +15,12 @@
 }
 
 .panel {
-    position: static;
+    position: absolute;
     display: inline-block;
-    background-color: rgba(10, 10, 10, 0.801);
+    background-color: rgba(3, 3, 3, 0.801);
+    bottom: 15mm;
+    right: 6mm;
     width: 30mm;
-    margin: 30mm 0px 0px 6mm;
     padding: 6mm 6mm 6mm 6mm;
 }
 
